--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.15.0",
     "prettier": "^1.16.4",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.7",
