--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
     "prettier": "^1.16.4",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.7",
     "rxjs": "~6.3.3",
