--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^1.0.0",
     "primeng": "^6.1.7",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
